--- a/src/main/webapp/app/images/details-upload/details-upload.component.html
+++ b/src/main/webapp/app/images/details-upload/details-upload.component.html
@@ -1,1 +1,1 @@
-<img [src]="'/api/photos/'+fileUpload.name+'/'" alt="{{fileUpload.name}}" style="max-width:350px"/>
+<img [src]="'/api/photos/'+fileUpload.name+'/'" alt="{{fileUpload.name}}" class="details"/>
