--- a/src/main/webapp/app/images/form-upload/form-upload.component.html
+++ b/src/main/webapp/app/images/form-upload/form-upload.component.html
@@ -10,4 +10,6 @@
     <input type="file" (change)="selectFile($event)">
 </label>
 
-<button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+<div>
+    <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
+</div>
